# ZhenCMS

./: .gitignore  README.md
cms/: db.sqlite3  pyproject.toml
cms/cms/: settings.py  urls.py
cms/file/: admin.py  models.py  serializers.py  urls.py  views.py
cms/file/migrations/: 0001_initial.py  0002_alter_file_folder_alter_file_root_folder.py  0003_file_shareable.py  0004_file_views.py  0005_alter_file_uuid.py  0006_alter_file_uuid.py
cms/folder/: admin.py  models.py
cms/folder/migrations/: 0001_initial.py
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/pages/: index.vue  view.vue
